# FractalSoundExplorer

./: .gitignore  CMakeLists.txt  README.md  build.bat  compile.bat
linux/: MandelbrotMusic.desktop
src/: Main.cpp  frag.glsl
